# karmans-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  docker-compose.yml  pyproject.toml
app/: __main__.py
app/core/: bot.py  config.py  faststream.py  nats.py  postgres.py  redis.py
app/filters/: admin.py
app/handlers/: __init__.py  admin.py  help.py  language.py  mailing.py  menu.py  moderation.py  premium.py  start.py  stats.py
app/locales/: messages.pot
app/locales/en/LC_MESSAGES/: messages.mo  messages.po
app/locales/ru/LC_MESSAGES/: messages.mo  messages.po
app/locales/uk/LC_MESSAGES/: messages.mo  messages.po
app/middlewares/: __init__.py  analytics.py  auth.py  banned.py  locale.py  media.py  posthog.py  session.py  subscription.py
app/models/: __init__.py  base.py  channel.py  payment.py  user.py
app/repositories/: channels.py  payments.py  users.py
app/schemas/: mailing.py
app/services/: admin.py  analytics.py  auth.py  authorization.py  broker.py  mailing.py  payment.py  posthog.py
app/utils/: commands.py  enums.py  keyboards.py  messages.py  states.py
app/workers/: mailing.py  main.py
migrations/: env.py
migrations/versions/: 0114537c360e_add_channel.py  4ac00f079ac0_initial_tables.py  cd9defdea286_initial_tables.py  d35b9f7e36cb_initial_tables.py
