[project]
name = "Karmans"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram[i18n]>=3.23.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "faststream[nats]>=0.6.5",
    "httpx[http2]>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sqlalchemy[asyncio]>=2.0.45",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
